--- a/package.json
+++ b/package.json
@@ -20,8 +20,18 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-imask": "^4.1.5",
+    "angular-in-memory-web-api": "^0.8.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "currency-formatter": "^1.5.3",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.0",
     "rxjs": "~6.2.0",
+    "toastr": "^2.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
