--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "moment": "^2.24.0",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.0",
-    "rxjs": "~6.2.0",
+    "rxjs": "~6.4.0",
     "toastr": "^2.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.9",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
